# ProjectDS

./: CMakeLists.txt  main.cpp
FunkcjeSterujace/: PanelSterowania.cpp  PanelSterowania.h
Logika Biznesowa/: Logowanie.cpp  Osoba.cpp  Osoba.h  Uzytkownik.cpp  main.cpp  main.h
Logika Biznesowa/RejestracjaILogowanie/: Logowanie.h  Register.cpp  Register.h  Rejestracja.cpp  Rejestracja.h  SignIn.cpp  SignIn.h  SignOut.cpp  SignOut.h
Logika Biznesowa/SerializacjaUzytkownikow/: WriteAndReadFromFile.cpp  WriteAndReadFromFile.h
Logika Biznesowa/StrukturyDanych/: BST.cpp  BST.h  Comparator.cpp  Comparator.h  IntegerComparator.h
Logika Biznesowa/WirtualneByty/: Osoba.cpp  Person.cpp  Person.h  User.cpp  User.h  Uzytkownik.cpp  Uzytkownik.h
