cmake_minimum_required(VERSION 3.25)
project(ProjectDS)

set(CMAKE_CXX_STANDARD 17)

add_executable(ProjectDS main.cpp "Logika Biznesowa/WirtualneByty/Osoba.cpp" "Logika Biznesowa/WirtualneByty/Osoba.cpp" "Logika Biznesowa/WirtualneByty/Osoba.cpp" "Logika Biznesowa/WirtualneByty/Uzytkownik.cpp" "Logika Biznesowa/WirtualneByty/Osoba.h" "Logika Biznesowa/WirtualneByty/Uzytkownik.h" "Logika Biznesowa/RejestracjaILogowanie/Logowanie.cpp" "Logika Biznesowa/RejestracjaILogowanie/Logowanie.h"
        "Logika Biznesowa/RejestracjaILogowanie/Rejestracja.cpp"
        "Logika Biznesowa/RejestracjaILogowanie/Rejestracja.h")
