cmake_minimum_required(VERSION 3.25)
project(ProjectDS)

set(CMAKE_CXX_STANDARD 17)

add_executable(ProjectDS main.cpp "Logika Biznesowa/WirtualneByty/Person.cpp" "Logika Biznesowa/WirtualneByty/Person.cpp" "Logika Biznesowa/WirtualneByty/Person.cpp" "Logika Biznesowa/WirtualneByty/User.cpp" "Logika Biznesowa/WirtualneByty/Person.h" "Logika Biznesowa/WirtualneByty/User.h" "Logika Biznesowa/RejestracjaILogowanie/SignIn.cpp" "Logika Biznesowa/RejestracjaILogowanie/SignIn.h"
        "Logika Biznesowa/RejestracjaILogowanie/SignOut.cpp"
        "Logika Biznesowa/RejestracjaILogowanie/SignOut.h" "Logika Biznesowa/SerializacjaUzytkownikow/WriteAndReadFromFile.cpp" "Logika Biznesowa/SerializacjaUzytkownikow/WriteAndReadFromFile.h")
